// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table specialist {
  id int  [primary key]
  surname varchar
  first_name varchar
  patronymic varchar
  speciality varchar

    indexes {
      surname
      speciality
  }
}

Table service {
  id int [primary key]
  name varchar

  indexes {
      name [unique]
  }
}

Table price {
  id int [primary key]
  service_id int
  price decimal
  begin_date datetime2
  end_date datetime2

  indexes {
      (service_id, begin_date, end_date) [unique]
  }
}

Table specialist_service {
  id int [primary key]
  specialist_id int
  service_id int

  indexes {
      (service_id, specialist_id) [unique]
  }
}

Table clients {
  id int [primary key]
  surname varchar
  first_name varchar
  patronymic varchar
  phone varchar

  indexes {
      surname [type: hash]
      phone [unique]
  }
}

Table visit {
  id int [primary key]
  client_id int
  date datetime2
  purpose varchar
  comment varchar

  indexes {
      client_id
  }
}

Table service_provided {
  id int [primary key]
  service_id int
  visit_id int
  date datetime2

  indexes {
      (visit_id, service_id)
  }
}

Table examination_result{
  id int [primary key]
  service_provided_id int
  date datetime2
  result varchar

  indexes {
      service_provided_id
  }
}

Table visit_specialist{
  id int [primary key]
  visit_id int
  specialist_id int
  comment varchar

  indexes {
      (specialist_id, visit_id)
  }
}

Ref: service.id < price.service_id
Ref: service.id < specialist_service.service_id
Ref: specialist.id < specialist_service.specialist_id
Ref: clients.id < visit.client_id
Ref: specialist.id < visit_specialist.specialist_id
Ref: visit.id < visit_specialist.visit_id
Ref: service.id < service_provided.service_id
Ref: visit.id < service_provided.visit_id
Ref: service_provided.id < examination_result.service_provided_id
